# battery-manager-ha

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HACS_INSTALLATION.md  LICENSE  PROJECT_COMPLETE.md  README.md  SECURITY.md  STARTUP_OPTIMIZATION.md  debug_flows.py  hacs.json  info.md  pyproject.toml  test_discharge_sensor.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  validate.yml
assets/brands/: README.md
custom_components/battery_manager/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  debug_utils.py  diagnostics.py  entity.py  history_profile.py  manifest.json  sensor.py  services.yaml  switch.py
docs/: ALGORITHM.md  ARCHITECTURE.md  CONSUMPTION_FORECAST.md  DC_TOPOLOGY.md  F-EXECUTOR-GUARDS.md  F-GATE-PARITY.md  F-GATE-TOPUP.md  F-LOAD-PRIORITY.md  F-NIGHT-RESCUE.md  F-PERDAY-SURPLUS.md  F-PLANNER-HONESTY.md  F-PREDRAIN.md  F-QUANTILE-BANDS.md  F-RECONFIGURE-PV.md  F-RESCUE-EXPORT.md  F-RESIDUAL-TOPUP.md  F-ROBUST-POWER.md  F-SEAMLESS-RUNS.md  F-STRICT-SURPLUS.md  F-SUBHOUR-ALLOCATION.md  F-TANK.md  IMPLEMENTATION_PLAN.md  LOAD_CONTROL.md  REQUIREMENTS.md  STRATEGY.md
docs/orders/: balcony-solar-forecast-auftrag-2026-07-24.md
images/: README.md
scripts/: gen_golden.py
standalone_test/: test_battery_manager.py  test_battery_manager_cli.py  test_error_handling.py  test_results.json  validate_system.py
tests/: conftest.py
tests/core/: conftest.py  golden_night_predrain.json  golden_topology.json  test_forecast_hours.py  test_golden_night_predrain.py  test_golden_topology.py  test_load_profile.py  test_optimize.py  test_power_learning.py  test_series.py  test_simulate.py
tests/ha/: conftest.py  test_config_flow.py  test_coordinator.py  test_dc48_controller.py  test_frontend.py  test_history_profile.py  test_load_switching.py  (+1 more)
(+20 files in other folders)
